fix bootstrap.sh
